Code and Functionality modifications