@@ -25,18 +25,41 @@ import java.net.URI;
 import java.util.List;
 import java.util.stream.Collectors;
 
+/**
+ * REST controller exposing CRUD and domain operations for bank accounts.
+ * <p>
+ * Supports:
+ * <ul>
+ *   <li>Create a new account (optionally with initial balance)</li>
+ *   <li>Retrieve all accounts or a single account by ID</li>
+ *   <li>Update an account’s balance exactly (via deposit/withdrawal delta)</li>
+ *   <li>Delete an account (along with its operations)</li>
+ *   <li>Deposit and withdraw operations</li>
+ *   <li>Fetch account statement (history of operations)</li>
+ * </ul>
+ * </p>
+ */
 @RestController
 @RequestMapping("/api/accounts")
 @RequiredArgsConstructor
 @Validated
 public class AccountController {
+
+    /**
+     * Service layer for account business logic.
+     */
     private final AccountService accountService;
 
-
-    /** CREATE */
+    /**
+     * Creates a new bank account, optionally depositing the given initial balance.
+     *
+     * @param req the request containing the initial balance (must be ≥ 0)
+     * @return HTTP 201 Created with Location header pointing to the new resource,
+     * and the created {@link AccountResponse} in the body
+     */
     @PostMapping
     public ResponseEntity<AccountResponse> create(
-            @RequestBody @Valid CreateAccountRequest req
+            @RequestBody @Valid final CreateAccountRequest req
     ) {
         var acct = accountService.createAccount(req.getInitialBalance());
         URI location = ServletUriComponentsBuilder.fromCurrentRequest()
@@ -47,7 +70,11 @@ public class AccountController {
                 .body(new AccountResponse(acct.getId(), acct.getBalance(), acct.getCreatedAt()));
     }
 
-    /** READ all */
+    /**
+     * Retrieves all existing bank accounts.
+     *
+     * @return a list of {@link AccountResponse}, each containing ID, balance, and creation timestamp
+     */
     @GetMapping
     public List<AccountResponse> listAll() {
         return accountService.getAllAccounts().stream()
@@ -55,51 +82,98 @@ public class AccountController {
                 .toList();
     }
 
-    /** READ one */
+    /**
+     * Retrieves a single bank account by its ID.
+     *
+     * @param id the unique identifier of the account
+     * @return the {@link AccountResponse} for the given account
+     * @throws IllegalArgumentException if no account exists with the given ID
+     */
     @GetMapping("/{id}")
-    public AccountResponse getOne(@PathVariable Long id) {
+    public AccountResponse getOne(@PathVariable final Long id) {
         var a = accountService.getAccount(id);
         return new AccountResponse(a.getId(), a.getBalance(), a.getCreatedAt());
     }
 
-    /** UPDATE balance exactly */
+    /**
+     * Updates an account’s balance to the exact specified amount.
+     * <p>
+     * Internally computes the delta from the current balance and applies
+     * a deposit or withdrawal operation accordingly.
+     * </p>
+     *
+     * @param id  the account ID to update
+     * @param req the request containing the new desired balance (must be ≥ 0)
+     * @return the updated {@link AccountResponse}
+     * @throws IllegalStateException    on insufficient funds when decreasing balance
+     * @throws IllegalArgumentException if no account exists with the given ID
+     */
     @PutMapping("/{id}")
     public AccountResponse update(
-            @PathVariable Long id,
-            @RequestBody @Valid UpdateAccountRequest req
+            @PathVariable final Long id,
+            @RequestBody @Valid final UpdateAccountRequest req
     ) {
         var a = accountService.updateAccountBalance(id, req.getNewBalance());
         return new AccountResponse(a.getId(), a.getBalance(), a.getCreatedAt());
     }
 
-    /** DELETE */
+    /**
+     * Deletes an account and all its associated operations.
+     *
+     * @param id the account ID to delete
+     * @return HTTP 204 No Content on successful deletion
+     */
     @DeleteMapping("/{id}")
-    public ResponseEntity<Void> delete(@PathVariable Long id) {
+    public ResponseEntity<Void> delete(@PathVariable final Long id) {
         accountService.deleteAccount(id);
         return ResponseEntity.noContent().build();
     }
 
-    
+    /**
+     * Deposits the specified amount into the account.
+     *
+     * @param id  the account ID to deposit into
+     * @param req the request containing the amount to deposit (must be > 0)
+     * @return HTTP 200 OK on success
+     * @throws IllegalArgumentException if no account exists with the given ID
+     */
     @PostMapping("/{id}/deposit")
     public ResponseEntity<Void> deposit(
-            @PathVariable Long id,
-            @RequestBody @Valid DepositRequest req
+            @PathVariable final Long id,
+            @RequestBody @Valid final DepositRequest req
     ) {
         accountService.deposit(id, req.getAmount());
         return ResponseEntity.ok().build();
     }
 
+    /**
+     * Withdraws the specified amount from the account.
+     *
+     * @param id  the account ID to withdraw from
+     * @param req the request containing the amount to withdraw (must be > 0)
+     * @return HTTP 200 OK on success
+     * @throws IllegalStateException    if the account has insufficient funds
+     * @throws IllegalArgumentException if no account exists with the given ID
+     */
     @PostMapping("/{id}/withdraw")
     public ResponseEntity<Void> withdraw(
-            @PathVariable Long id,
-            @RequestBody @Valid WithdrawRequest req
+            @PathVariable final Long id,
+            @RequestBody @Valid final WithdrawRequest req
     ) {
         accountService.withdraw(id, req.getAmount());
         return ResponseEntity.ok().build();
     }
 
+    /**
+     * Retrieves the statement (operation history) for the account.
+     *
+     * @param id the account ID whose statement to fetch
+     * @return HTTP 200 OK with a list of {@link StatementResponse}, each containing
+     * date, type, amount, and resulting balance
+     * @throws IllegalArgumentException if no account exists with the given ID
+     */
     @GetMapping("/{id}/statement")
-    public ResponseEntity<List<StatementResponse>> statement(@PathVariable Long id) {
+    public ResponseEntity<List<StatementResponse>> statement(@PathVariable final Long id) {
         var ops = accountService.getStatement(id);
         var resp = ops.stream()
                 .map(op -> new StatementResponse(
@@ -108,7 +182,7 @@ public class AccountController {
                         op.getAmount(),
                         op.getBalanceAfter()
                 ))
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(resp);
     }
 }
